# sqlite-virtual-url

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: avro_read_example.rs  csv_read_example.rs  series_example.rs
extra/: build.sh
src/: args.rs  avro.rs  fmt.rs  lib.rs  storage.rs  vector_impl.rs
src/dtypes/: inference.rs  mod.rs  schema.rs
src/io/: avro_reader.rs  csv_reader.rs  mod.rs
tests/: simple.sql  test.sql  test_avro.sql  test_json.sql  test_ndjson.sql  test_parquet.sql
