[package]
name = "sqlite-virtual-url"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = { version = "0.0.6-alpha.6" }
reqwest = { version = "0.12", features = ["blocking"] }
csv = "1"
avro-rs = { version = "0.13.0" , features = ["snappy"] }
parquet = "55.0.0"

[lib]
crate-type = ["cdylib"]
