[package]
name = "sqlite-virtual-url"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = { version = "0.0.6-alpha.6" }
reqwest = { version = "0.12", features = ["blocking"] }
avro-rs = { version = "0.13.0", features = ["snappy"] }
chrono = "0.4.41"
polars = { version = "0.42.0", features = [
    "lazy",
    "csv",
    "json",
    "parquet",
    "strings",
] }


[lib]
crate-type = ["cdylib"]
