[package]
name = "sqlite-httpfs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = { version = "0.0.6-alpha.6" }
reqwest = { version = "0.12.15", features = ["blocking"] }
avro-rs = { version = "0.13.0", features = ["snappy"] }
chrono = "0.4.41"
polars = { version = "0.46.0", features = [
    "lazy",
    "csv",
    "json",
    "parquet",
    "strings",
] }
libsqlite3-sys = "0.34.0"
csv = "1.3.1"


[lib]
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmark"
harness = false
